--- a/app/design/frontend/waterlee-boilerplate/default/layout/local.xml
+++ b/app/design/frontend/waterlee-boilerplate/default/layout/local.xml
@@ -33,7 +33,7 @@
 			<remove name="global_messages" />			
 		</reference>
 
-		<reference name="after_body_start">
+		<reference name="footer">
 			<block type="core/template" name="inchoo_global_messages" template="core/inchoo_global_messages.phtml" before="-" />
 			<block type="core/template" name="mmenu" template="page/html/mmenu.phtml">
 				<block type="page/switch" name="mmenu_language_switcher" as="mmenu_language_switcher" template="page/switch/languages.phtml"/>
