--- a/app/design/frontend/waterlee-boilerplate/default/layout/local.xml
+++ b/app/design/frontend/waterlee-boilerplate/default/layout/local.xml
@@ -33,9 +33,16 @@
 			<remove name="global_messages" />			
 		</reference>
 
-		<reference name="footer">
+		<reference name="after_body_start">
 			<block type="core/template" name="inchoo_global_messages" template="core/inchoo_global_messages.phtml" before="-" />
-			<block type="core/template" name="mmenu" template="page/html/mmenu.phtml">
+		</reference>
+
+
+		<reference name="footer">
+            <block type="newsletter/subscribe" name="footer.newsletter" before="-" template="newsletter/subscribe.phtml"/>
+            <remove name="store_switcher" />
+
+            <block type="core/template" name="mmenu" template="page/html/mmenu.phtml">
 				<block type="page/switch" name="mmenu_language_switcher" as="mmenu_language_switcher" template="page/switch/languages.phtml"/>
 				<block type="page/switch" name="mmenu_store_switcher" as="mmenu_store_switcher" template="page/switch/stores.phtml"/>
 				<block type="directory/currency" name="mmenu_currency_switcher" before="-" template="directory/currency.phtml"/>
@@ -47,14 +54,7 @@
 				</block>
 				
                 <block type="page/html_topmenu" name="mmenu_topnav" template="page/html/mobile_topmenu.phtml"/>
-                
 			</block>
-		</reference>
-
-
-		<reference name="footer">
-            <block type="newsletter/subscribe" name="footer.newsletter" before="-" template="newsletter/subscribe.phtml"/>
-            <remove name="store_switcher" />
     	</reference>
 
 	</default>
